k8s/apps/jhu-devops/gitlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: gitlab
