k8s/apps/jhu-devops/gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - gitlab.zeb17-int.duckdns.org
      secretName: gitlab-cert
  rules:
    - host: gitlab.zeb17-int.duckdns.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gitlab
                port:
                  number: 80
